--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="js/script.js"></script>
-	<script >
-
-	</script>
-	<title>hello</title>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="js/SpeakHello.js"></script>
+  <script src="js/SpeakGoodBye.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
-<h1>wassup</h1>
-<script >
-	console.log("right before the body ends")
-</script>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
